--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <title>VocalizeX - AI 驱动的文本转语音</title></head>
 
 <body>
-  <iframe src="NPC.html" frameborder="0" width="100%" allow="
+  <iframe src="https://ltjuhmdc.usercontents.app/" frameborder="0" width="100%" allow="
   accelerometer;
   autoplay;
   camera;
